Refactor: Nginx ahora fuerza https.

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,23 +20,57 @@ http {
         keepalive 32;
     }
 
-    # Configuración del servidor para el frontend
-    server {
-        # FRONTEND
-        listen 80;
-        server_name localhost;
+    # Configuración del servidor HTTP
+    # server {
+    #     # FRONTEND
+    #     listen 80;
+    #     server_name localhost;
 
-        # Redirección de HTTP a HTTPS
-        # location / {
-        #     return 301 https://$host$request_uri;
-        # }
+    #     # Redirección de HTTP a HTTPS
+    #     # location / {
+    #     #     return 301 https://$host$request_uri;
+    #     # }
+    #     location / {
+    #         root /var/www/frontend;
+    #         index index.html;
+    #         try_files $uri $uri/ /index.html;
+    #     }
+
+    #     # BACKEND
+    #     location /api/ {
+    #         proxy_pass http://flask_api/;
+    #         proxy_http_version 1.1;
+    #         proxy_set_header Upgrade $http_upgrade;
+    #         proxy_set_header Connection "upgrade";
+    #         proxy_set_header Host $host;
+    #         proxy_set_header X-Real-IP $remote_addr;
+    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #         proxy_set_header X-Forwarded-Proto $scheme;
+    #         proxy_set_header X-Forwarded-Host $host;
+    #         proxy_set_header X-Forwarded-Port $server_port;
+    #     }
+    # }
+
+    server {
+        listen 80;
+        server_name manu-el-dev.com www.manu-el-dev.com;
+        return 301 https://$host$request_uri;
+    }
+
+    # Configuracion del servidor HTTPS
+    server {
+        listen 443 ssl;
+        server_name manu-el-dev.com www.manu-el-dev.com;
+
+        ssl_certificate /etc/letsencrypt/live/manu-el-dev.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/manu-el-dev.com/privkey.pem;
+
         location / {
             root /var/www/frontend;
             index index.html;
             try_files $uri $uri/ /index.html;
         }
 
-        # BACKEND
         location /api/ {
             proxy_pass http://flask_api/;
             proxy_http_version 1.1;
