--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+load_module modules/ngx_http_secure_link_module.so;
+
 events {
     worker_connections 1024;
 }
@@ -20,37 +22,6 @@ http {
         keepalive 32;
     }
 
-    # Configuración del servidor HTTP
-    # server {
-    #     # FRONTEND
-    #     listen 80;
-    #     server_name localhost;
-
-    #     # Redirección de HTTP a HTTPS
-    #     # location / {
-    #     #     return 301 https://$host$request_uri;
-    #     # }
-    #     location / {
-    #         root /var/www/frontend;
-    #         index index.html;
-    #         try_files $uri $uri/ /index.html;
-    #     }
-
-    #     # BACKEND
-    #     location /api/ {
-    #         proxy_pass http://flask_api/;
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-Host $host;
-    #         proxy_set_header X-Forwarded-Port $server_port;
-    #     }
-    # }
-
     server {
         listen 80;
         server_name manu-el-dev.com www.manu-el-dev.com;
@@ -65,12 +36,14 @@ http {
         ssl_certificate /etc/letsencrypt/live/manu-el-dev.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/manu-el-dev.com/privkey.pem;
 
+        # FRONTEND
         location / {
             root /var/www/frontend;
             index index.html;
             try_files $uri $uri/ /index.html;
         }
 
+        # FLASK API
         location /api/ {
             proxy_pass http://flask_api/;
             proxy_http_version 1.1;
@@ -83,22 +56,31 @@ http {
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
         }
+
+        # PROTECTED MEDIA FILES
+        location /media/ {
+            # Validación del token y expiración
+            secure_link $arg_secure_token,$arg_expires;
+            secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
+
+            # Rechazos claros
+            if ($secure_link = "") {
+                return 403;
+            }
+
+            if ($secure_link = "0") {
+                return 410;
+            }
+
+            # Ruta real de los archivos
+            root /var/www/static-files;
+
+            # Intentar servir el archivo directamente
+            try_files $uri =404;
+
+            # Opcional: headers
+            expires 1h;
+            access_log off;
+        }
     }
-
-    # Configuración del servidor HTTPS para el frontend
-    # server {
-    #     listen 443 ssl;
-    #     listen [::]:443 ssl;
-    #     server_name localhost;
-
-    #     # Aquí deberías agregar tus certificados SSL
-    #     # ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     # ssl_certificate_key /etc/nginx/ssl/key.pem;
-
-    #     location / {
-    #         root /usr/share/nginx/html;
-    #         index index.html;
-    #         try_files $uri $uri/ /index.html;
-    #     }
-    # }
 } 
