Fix: Ruta de archivos estaticos.

--- a/nginx.conf
+++ b/nginx.conf
@@ -71,7 +71,7 @@ http {
             }
 
             # Ruta real de los archivos
-            root /var/www/static-files;
+            root /var/www/media;
 
             # Intentar servir el archivo directamente
             try_files $uri =404;
