Refactor: el nombre del param para urls firmadas ahora es token.

--- a/nginx.conf
+++ b/nginx.conf
@@ -58,7 +58,7 @@ http {
         # PROTECTED MEDIA FILES
         location /media/ {
             # Validación del token y expiración
-            secure_link $arg_secure_token,$arg_expires;
+            secure_link $arg_token,$arg_expires;
             secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
 
             # Rechazos claros
