Add: debug headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -79,6 +79,11 @@ http {
             # Opcional: headers
             expires 1h;
             access_log off;
+
+            add_header X-Debug-Token "$arg_token";
+            add_header X-Debug-Expires "$arg_expires";
+            add_header X-Debug-URI "$uri";
+            add_header X-Debug-Calculated "$secure_link";
         }
     }
 } 
