Add: headers in response

--- a/nginx.conf
+++ b/nginx.conf
@@ -62,10 +62,10 @@ http {
             secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
 
 
-            add_header X-Debug-Token "$arg_token";
-            add_header X-Debug-Expires "$arg_expires";
-            add_header X-Debug-URI "$uri";
-            add_header X-Debug-Calculated "$secure_link";
+            add_header X-Debug-Token "$arg_token" always;
+            add_header X-Debug-Expires "$arg_expires" always;
+            add_header X-Debug-URI "$uri" always;
+            add_header X-Debug-Calculated "$secure_link" always;
 
             # Rechazos claros
             if ($secure_link = "") {
