--- a/nginx.conf
+++ b/nginx.conf
@@ -77,7 +77,7 @@ http {
             }
 
             # Ruta real de los archivos
-            root /var/www/media;
+            root /var/www;
 
             # Intentar servir el archivo directamente
             try_files $uri =404;
