Add: archivos para entorno de desarrollo.

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,71 +20,9 @@ http {
         keepalive 32;
     }
 
-    server {
-        listen 80;
-        server_name manu-el-dev.com www.manu-el-dev.com;
-        return 301 https://$host$request_uri;
-    }
 
-    # Configuracion del servidor HTTPS
-    server {
-        listen 443 ssl;
-        server_name manu-el-dev.com www.manu-el-dev.com;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-        ssl_certificate /etc/letsencrypt/live/manu-el-dev.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/manu-el-dev.com/privkey.pem;
-
-        # FRONTEND
-        location / {
-            root /var/www/frontend;
-            index index.html;
-            try_files $uri $uri/ /index.html;
-        }
-
-        # FLASK API
-        location /api/ {
-            proxy_pass http://flask_api/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-        }
-
-        # PROTECTED MEDIA FILES
-        location /media/ {
-            # Validación del token y expiración
-            secure_link $arg_token,$arg_expires;
-            secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
-
-
-            add_header X-Debug-Token "$arg_token" always;
-            add_header X-Debug-Expires "$arg_expires" always;
-            add_header X-Debug-URI "$uri" always;
-            add_header X-Debug-Calculated "$secure_link" always;
-
-            # Rechazos claros
-            if ($secure_link = "") {
-                return 403;
-            }
-
-            if ($secure_link = "0") {
-                return 410;
-            }
-
-            # Ruta real de los archivos
-            root /var/www;
-
-            # Intentar servir el archivo directamente
-            try_files $uri =404;
-
-            # Opcional: headers
-            expires 1h;
-            access_log off;
-        }
-    }
+    include /etc/nginx/conf.d/*.conf;
 } 
