Change: proteccion de media comentada

--- a/conf.d/development.conf
+++ b/conf.d/development.conf
@@ -51,17 +51,17 @@ server {
     # PROTECTED MEDIA FILES
     location /media/ {
         # Validación del token y expiración
-        secure_link $arg_token,$arg_expires;
-        secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
+        # secure_link $arg_token,$arg_expires;
+        # secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
 
-        # Rechazos claros
-        if ($secure_link = "") {
-            return 403;
-        }
+        # # Rechazos claros
+        # if ($secure_link = "") {
+        #     return 403;
+        # }
 
-        if ($secure_link = "0") {
-            return 410;
-        }
+        # if ($secure_link = "0") {
+        #     return 410;
+        # }
 
         # Ruta real de los archivos
         root /var/www;
