Add: soporte de nginx para landing de tkdfast

--- a/conf.d/production.conf
+++ b/conf.d/production.conf
@@ -1,12 +1,45 @@
+# === TKDFAST ===
+
+# Redirección HTTP → HTTPS
+server {
+    listen 80;
+    server_name tkdfast.com www.tkdfast.com;
+
+    root /var/www/tkdfast-landing;
+
+    location ~ ^/.well-known/acme-challenge/ {
+        allow all;
+    }
+
+    location / {
+        return 404;
+    }
+}
+server {
+    listen 443 ssl;
+    server_name tkdfast.com www.tkdfast.com;
+
+    ssl_certificate /etc/letsencrypt/live/tkdfast.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tkdfast.com/privkey.pem;
+
+    root /var/www/tkdfast;
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+}
 
 
+# === MANU-EL-DEV ===
+
+# Redirección HTTP → HTTPS
 server {
     listen 80;
     server_name manu-el-dev.com www.manu-el-dev.com;
     return 301 https://$host$request_uri;
 }
 
-# Configuracion del servidor HTTPS
 server {
     listen 443 ssl;
     server_name manu-el-dev.com www.manu-el-dev.com;
@@ -14,10 +47,11 @@ server {
     ssl_certificate /etc/letsencrypt/live/manu-el-dev.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/manu-el-dev.com/privkey.pem;
 
-    # FRONTEND
+    root /var/www/frontend;
+    index index.html;
+
+    # FRONTEND SPA
     location / {
-        root /var/www/frontend;
-        index index.html;
         try_files $uri $uri/ /index.html;
     }
 
@@ -35,29 +69,17 @@ server {
         proxy_set_header X-Forwarded-Port $server_port;
     }
 
-    # PROTECTED MEDIA FILES
+    # ARCHIVOS PROTEGIDOS
     location /media/ {
-        # Validación del token y expiración
-        # secure_link $arg_token,$arg_expires;
-        # secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
-
-        # # Rechazos claros
-        # if ($secure_link = "") {
-        #     return 403;
-        # }
-
-        # if ($secure_link = "0") {
-        #     return 410;
-        # }
-
-        # Ruta real de los archivos
         root /var/www;
-
-        # Intentar servir el archivo directamente
         try_files $uri =404;
-
-        # Opcional: headers
         expires 1h;
         access_log off;
+
+        # Seguridad por token (descomentá si lo activás):
+        # secure_link $arg_token,$arg_expires;
+        # secure_link_md5 "nginx!s3cre3t0$uri$arg_expires";
+        # if ($secure_link = "") { return 403; }
+        # if ($secure_link = "0") { return 410; }
     }
 }
